# irtoy_tool

./: .gitmodules  CMakeLists.txt  Jamfile  Makefile  config.kodi  config.macpro  config.macpro.test  config.myth  config.plex  dvdrw.buttons  error.c  error.h  gen_jitter.pl  init.sh  install.sh  ir_input  ir_input2  irtoy.c  irtoy.h  irtoy_tool.c  keywords.c  keywords.h  keywords.inc.new  mac_actions.c  mac_actions.h  mk_defs.pl  panasonictv.buttons  remote.command  server.c  server.h  split_packets.sh  testbuttondict  testconfig  tivo.buttons  update_keywords.pl
amp_remote/: ---  0  2  3  4  6  7  8  9  a-b  aux_phono  av_md  cd  dvd  first  intro  last  mute  next  openclose  pause  play  power  prev  prog  remain  repeat  space  stop  tape  tuner  voldown  volup
black_remote/: chandown  chanup  left  menu  ok  playpause  right  voldown  volup
dvdrw_remote/: 0  1  2  3  4  5  6  7  8  9  angle  audio  clear  disc  down  edit  first  last  left  ok  pause  play  power  rec  rec_mode  return  right  select  source  stop  subtitle  system  tc  timer  top_menu  tv  up
init.d/: irtoy
tivo/: 0  1  2  3  4  5  6  7  8  9  back  chdown  chup  clear  down  end  forward  green  guide  home  info  last_chan  left  mute  myshows  ok  pause  play  power  record  red  rewind  right  slow  stop  subtitles  text  thumbsdown  thumbsup  tv  (+4 more)
wharfedale/: autorepeat  left  menu  mute  play_pause  prog  random  repeat  right  scroll_down  scroll_up  select  up_stop
